scribble-test/src/test/resources/good/syntax/disamb/imports/Import01c.scr
module good.syntax.disamb.imports.Import01c;


global protocol Import1c(role C, role D)
{
	4() from C to D;
}
