scribble-test/src/test/resources/bad/syntax/disamb/rolearglist/RoleArgList02.scr
module bad.syntax.disamb.rolearglist.RoleArgList02;


global protocol Foo(role A, role B)
{
	do Bar(A, A);
}

global protocol Bar(role C, role D)
{
	1() from C to D;
}
